--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,30 @@
 #card-div {
     display: flex;
 }
+#popup-div {
+    position: fixed;
+    display: none;
+    background-color: antiquewhite;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 400px;
+    margin-left: -200px;
+    margin-top: -200px;
+    z-index: 9;
+    text-align: center;
+    
+}
+
+input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+input[type=text], [type=number] {
+    width: 90%;
+    
+}
+#submit-button {
+    margin-top: 10px;
+    width: 90%;
+}
